refactor: move nswag config into client app folders (#1514)
- Rename config.nswag → ClientApp/nswag.json
- Rename config-react.nswag → ClientApp-React/nswag.json
- Move Templates/ into ClientApp-React/
- Update internal paths (url, output, templateDirectory) relative to new locations
- Simplify generate-api scripts — no more \cd ..\, use \
swag run /runtime:Net100\
- Add generate-api to prestart so API client is regenerated on \dotnet run\
- Remove now-redundant exclusions and rename rule from template.json
- Remove nswag from .editorconfig glob (covered by *.json)

--- a/src/Web/ClientApp-React/package.json
+++ b/src/Web/ClientApp-React/package.json
@@ -24,12 +24,12 @@
     "vite": "^7.0.0"
   },
   "scripts": {
-    "prestart": "node aspnetcore-https.cjs",
+    "prestart": "node aspnetcore-https.cjs && npm run generate-api",
     "start": "vite",
     "prebuild": "npm run generate-api",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint ./src/",
-    "generate-api": "cd .. && nswag run config-react.nswag"
+    "generate-api": "nswag run /runtime:Net100"
   }
 }
